--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -48,7 +48,7 @@
       <p class="single-text"><%= @blog.body %></p>
 
       <%= link_to '編集', edit_blog_path(@blog) %>
-      <%= link_to '削除', method: :delete, "data-confirm" => "本当に削除しますか？" %>
+      <%= link_to '削除', blog_path, method: :delete, "data-confirm" => "本当に削除しますか？" %>
       
        <div class="author-case">
         <div class="author-image"></div>
